--- a/style.css
+++ b/style.css
@@ -3,6 +3,10 @@ body { line-height: 1; background: #eee; text-align: left; }
 * { border: 0; outline: none; font-size: 100%; font: inherit; vertical-align: baseline; margin: 0; padding: 0; box-sizing: border-box; color: #000; }
 * { font-family: sans-serif; font-size: 14px; line-height: 1.4; }
 
+form {
+  width: 100%;
+}
+
 input, button {
     border: 1px solid #000;
     padding: 5px;
@@ -63,6 +67,11 @@ body {
     transition: all 0.5s;
 }
 
+  .signin-forum input,
+  .signin-forum button {
+    width: 100%;
+  }
+
 .chat-form {
     background: #fff;
     box-shadow: 1px 1px 5px #555;
@@ -75,28 +84,28 @@ body {
     transition: all 0.5s;
 }
 
-.chat-log {
-    width: 100%;
-    height: 100%;
-    background: #fff;
-    overflow-y: scroll;
-    border: 1px solid #000;
-    padding: 20px;
-}
+  .chat-log {
+      width: 100%;
+      height: 100%;
+      background: #fff;
+      overflow-y: scroll;
+      border: 1px solid #000;
+      padding: 20px;
+  }
 
-.chat-msg {
-    padding: 10px;
-}
+  .chat-msg {
+      padding: 10px;
+  }
 
-.msg-name {
-    font-size: 16px;
-    font-weight: 600;
-}
+  .msg-name {
+      font-size: 16px;
+      font-weight: 600;
+  }
 
-.msg-name:after {
-    content: ': ';
-}
+  .msg-name:after {
+      content: ': ';
+  }
 
-.msg-text {
+  .msg-text {
 
-}
+  }
